crates/compiler/semantic/tests/snapshots/diagnostics__scoping::unused_variables::test_simple_unused_variable.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_simple_unused_variable"
---
Fixture: semantic_tests::scoping::unused_variables::test_simple_unused_variable
============================================================
Source code:

        fn test() {
            let unused = 42;
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused'
   ╭─[ semantic_tests::scoping::unused_variables::test_simple_unused_variable:3:17 ]
   │
 3 │             let unused = 42;
   │                 ───┬──  
   │                    ╰──── Unused variable 'unused'
───╯
