crates/compiler/semantic/tests/snapshots/diagnostics__scoping::unused_variables::test_unused_in_nested_scope.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_unused_in_nested_scope"
---
Fixture: semantic_tests::scoping::unused_variables::test_unused_in_nested_scope
============================================================
Source code:

        func test() {
            let used = 10;
            {
                let unused_inner = 20;
            }
            return used;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused_inner'
   ╭─[ semantic_tests::scoping::unused_variables::test_unused_in_nested_scope:5:21 ]
   │
 5 │                 let unused_inner = 20;
   │                     ──────┬─────  
   │                           ╰─────── Unused variable 'unused_inner'
───╯
