crates/compiler/semantic/tests/snapshots/diagnostics__scoping::unused_variables::test_unused_parameter.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: scoping::unused_variables::test_unused_parameter"
---
Fixture: semantic_tests::scoping::unused_variables::test_unused_parameter
============================================================
Source code:

        fn test(unused_param: felt) {
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused_param'
   ╭─[ semantic_tests::scoping::unused_variables::test_unused_parameter:2:17 ]
   │
 2 │         fn test(unused_param: felt) {
   │                 ──────┬─────  
   │                       ╰─────── Unused variable 'unused_param'
───╯
