crates/compiler/semantic/tests/snapshots/diagnostics__statements::assignments::test_assignment_to_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: statements::assignments::test_assignment_to_undeclared_variable"
---
Fixture: semantic_tests::statements::assignments::test_assignment_to_undeclared_variable
============================================================
Source code:
func test() { 
        x = 42; // Error: undeclared variable
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'x'
   ╭─[ semantic_tests::statements::assignments::test_assignment_to_undeclared_variable:2:9 ]
   │
 2 │         x = 42; // Error: undeclared variable
   │         ┬  
   │         ╰── Undeclared variable 'x'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::statements::assignments::test_assignment_to_undeclared_variable:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
