crates/compiler/semantic/tests/snapshots/diagnostics__statements::assignments::test_assignment_to_variable_not_in_scope.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: statements::assignments::test_assignment_to_variable_not_in_scope"
---
Fixture: semantic_tests::statements::assignments::test_assignment_to_variable_not_in_scope
============================================================
Source code:
fn test() { 
        {
            let inner = 42;
        }
        inner = 10; // Error: inner not in scope
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ semantic_tests::statements::assignments::test_assignment_to_variable_not_in_scope:5:9 ]
   │
 5 │         inner = 10; // Error: inner not in scope
   │         ──┬──  
   │           ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::statements::assignments::test_assignment_to_variable_not_in_scope:1:4 ]
   │
 1 │ fn test() {
   │    ──┬─  
   │      ╰─── Function 'test' doesn't return on all paths
───╯
