crates/compiler/semantic/tests/snapshots/diagnostics__statements::expression_statements::test_function_call_statement_undeclared.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: statements::expression_statements::test_function_call_statement_undeclared"
---
Fixture: semantic_tests::statements::expression_statements::test_function_call_statement_undeclared
============================================================
Source code:
fn test() { 
        undefined_function(); // Error: undeclared function
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_function'
   ╭─[ semantic_tests::statements::expression_statements::test_function_call_statement_undeclared:2:9 ]
   │
 2 │         undefined_function(); // Error: undeclared function
   │         ─────────┬────────  
   │                  ╰────────── Undeclared variable 'undefined_function'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::statements::expression_statements::test_function_call_statement_undeclared:1:4 ]
   │
 1 │ fn test() {
   │    ──┬─  
   │      ╰─── Function 'test' doesn't return on all paths
───╯
