crates/compiler/semantic/tests/snapshots/diagnostics__types::u32_type_tests::test_u32_binary_op_type_mismatch.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: types::u32_type_tests::test_u32_binary_op_type_mismatch"
---
Fixture: semantic_tests::types::u32_type_tests::test_u32_binary_op_type_mismatch
============================================================
Source code:

        fn test() {
            let x: u32 = 10;  // Now works - literal inferred as u32
            let y: felt = 20;
            let z = x + y;    // Error: cannot add u32 and felt
            return;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'u32'
   ╭─[ semantic_tests::types::u32_type_tests::test_u32_binary_op_type_mismatch:5:21 ]
   │
 5 │             let z = x + y;    // Error: cannot add u32 and felt
   │                     ┬  
   │                     ╰── Invalid left operand for arithmetic operator 'Add'. Expected 'felt', found 'u32'
───╯
