crates/compiler/semantic/tests/snapshots/diagnostics__types::u32_type_tests::test_u32_requires_explicit_conversion.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: types::u32_type_tests::test_u32_requires_explicit_conversion"
---
Fixture: semantic_tests::types::u32_type_tests::test_u32_requires_explicit_conversion
============================================================
Source code:

        struct Config {
            port: u32,
            max_connections: u32,
        }

        fn create_config() -> Config {
            // Error: literals are felt, not u32
            return Config { port: 8080, max_connections: 1000 };
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Type mismatch for field 'port'. Expected 'u32', found 'felt'
   ╭─[ semantic_tests::types::u32_type_tests::test_u32_requires_explicit_conversion:9:35 ]
   │
 9 │             return Config { port: 8080, max_connections: 1000 };
   │                                   ──┬─  
   │                                     ╰─── Type mismatch for field 'port'. Expected 'u32', found 'felt'
───╯

--- Diagnostic 2 ---
[2001] Error: Type mismatch for field 'max_connections'. Expected 'u32', found 'felt'
   ╭─[ semantic_tests::types::u32_type_tests::test_u32_requires_explicit_conversion:9:58 ]
   │
 9 │             return Config { port: 8080, max_connections: 1000 };
   │                                                          ──┬─  
   │                                                            ╰─── Type mismatch for field 'max_connections'. Expected 'u32', found 'felt'
───╯
